--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   
   <body>
     <h1>Hello there, awesome person!</h1>
+    <img src="https://avatars2.githubusercontent.com/u/62865167?v=4">
   </body>
   
 </html>
