--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <body>
     <h1>Hello there, awesome person!</h1>
     <img src="https://avatars2.githubusercontent.com/u/62865167?v=4">
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Contact</li>
+    </ul>
   </body>
   
 </html>
