--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <h1>Hello there, awesome person!</h1>
     <img src="https://avatars2.githubusercontent.com/u/62865167?v=4">
     <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Contact</li>
+      <li><a href="https://github.com">Home</a></li>
+      <li><a href="https://google.com">About</a></li>
+      <li><a href="https://github.com">Contact</a></li>
     </ul>
   </body>
   
